--- a/frontend/src/pages/contact-profile/ContactProfilePage.scss
+++ b/frontend/src/pages/contact-profile/ContactProfilePage.scss
@@ -1,6 +1,7 @@
 .contact-profile-page {
   display: flex;
   flex-direction: column;
+  padding: 0 16px;
   min-height: 100vh;
   width: 100%;
   max-width: 480px;
